--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Web analytics",
     "keywords": ["analytics"],
     "homepage": "https://github.com/joffreydemetz/analytics/",
-    "version": "1.2.2",
+    "version": "2.0.0",
     "license": "MIT",
 
     "authors": [
@@ -15,6 +15,10 @@
             "role": "Lead"
         }
     ],
+
+    "require": {
+        "php": "^7.1.3"
+    },
     
     "autoload": {
         "psr-4": {
